pxc/tests/test_11_foreach/fe_arr5.px

namespace fe_arr5;
import test_common "";

function void test1(vector{string} const& a)
{
  foreach (size_t i, string& s : a) { // error
    s = i.to_string();
  }
  foreach (size_t i, string s : a) {
    println(a[i]);
  }
}

vector{string} a;
a.resize(100);
test1(a);
